ADD : signup Member

--- a/QTorder/src/main/resources/templates/fragment/bodyheader.html
+++ b/QTorder/src/main/resources/templates/fragment/bodyheader.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div class="header" th:fragment="bodyHeader">
+<div class="header" th:fragment="bodyheader">
     <a href="/"><h3 class="text-muted">Adullam QT</h3></a>
 </div>
