--- a/QTorder/src/main/resources/templates/home.html
+++ b/QTorder/src/main/resources/templates/home.html
@@ -9,14 +9,14 @@
 
 <div class="container">
 
-    <div th:replace="fragment/bodyHeader :: bodyHeader"/>
+    <div th:replace="fragment/bodyheader :: bodyheader"/>
 
     <div class="jumbotron">
         <h1>AdullamQT</h1>
         <p class="lead">아둘람 큐티 주문하기 !</p>
         <p>
-            <a class="btn btn-lg btn-secondary" href="/members/new">로그인</a>
-            <a class="btn btn-lg btn-secondary" href="/members">회원가입</a>
+            <a class="btn btn-lg btn-secondary" href="/members/signin">로그인</a>
+            <a class="btn btn-lg btn-secondary" href="/members/signup">회원가입</a>
         </p>
     </div>
 
