--- a/QTorder/src/main/resources/templates/fragment/header.html
+++ b/QTorder/src/main/resources/templates/fragment/header.html
@@ -11,5 +11,5 @@
     <!-- Custom styles for this template -->
     <link href="/css/bootstrap.css" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>AdullamQT</title>
 </head>
