--- a/QTorder/src/main/resources/templates/fragment/header.html
+++ b/QTorder/src/main/resources/templates/fragment/header.html
@@ -11,5 +11,8 @@
     <!-- Custom styles for this template -->
     <link href="/css/bootstrap.css" rel="stylesheet">
 
+    <!-- Vue.js -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
     <title>AdullamQT</title>
 </head>
