ADD CartRep, Rebuild signin page

--- a/QTorder/src/main/resources/templates/members/signin.html
+++ b/QTorder/src/main/resources/templates/members/signin.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragment/header :: header"/>
-<body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v4.0.1">
+    <title>Signin Template · Bootstrap</title>
 
-<div class="container">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <div th:replace="fragment/bodyheader :: bodyheader"/>
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
 
-    <form role="form" action="/members/signin" th:object="${memberForm}" method="post">
-
-        <div class="form-label-group">
-            <input type="text" th:field="*{mb_id}" class="form-control" placeholder="User ID" required autofocus>
-        </div>
-
-        <div class="form-label-group">
-            <input type="password" th:field="*{mb_pw}" class="form-control" placeholder="Password" required autofocus>
-        </div>
-
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-
-    </form>
-    <div th:replace="fragment/footer :: footer"/>
-</div>
-
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="/css/signin.css" rel="stylesheet">
+</head>
+<body class="text-center">
+<form class="form-signin" role="form" action="/member/signin" th:object="${memberForm}" method="post">
+    <img class="mb-4" src="/img/icon.png" alt="" width="100" height="100">
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" th:field="*{mb_email}" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" th:field="*{mb_pw}" id="inputPassword" class="form-control" placeholder="Password" required>
+    <div class="checkbox mb-3">
+        <label>
+            <input type="checkbox" value="remember-me"> Remember me
+        </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <p class="mt-5 mb-3 text-muted">&copy; KPMK12</p>
+</form>
 </body>
 </html>
